Update weather app with date/time

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
     <div id="weather">
         <h1>Weather App</h1>
+        <div id="datetime">Datetime : </div>
         <div id="weather-box">
             <input type="text" placeholder="Enter City name" id="cinput"><br>
             <button id="output">Click To check</button>
         </div>
+        
         <div id="loc">Location : </div>
         <div id="temperature">Temperature : </div>
+
     </div>
 
     <script src="script.js"></script>
